tests/snapshots/run_wpt_conformance__litert_reshape_float16_tensor_to_a_new_shape__reduce_dimensions_.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reshape.https.any.js",
    "reshape float16 tensor to a new shape (reduce dimensions)",
    "litert",
    "PASS",
)
